[package]
name = "animated-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-http-server = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "full",
] }
my-http-server-controllers = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
my-web-sockets-middleware = { branch = "main", git = "https://github.com/MyJetTools/my-web-sockets-middleware.git" }
my-logger = { branch = "0.1.3", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
unicase = "*"
url = "*"
rand = "*"
hyper-tungstenite = "*"
bytes = { version = "*", optional = true }
native-tls = { version = "*" }
websocket = "*"
futures = "*"
tokio-util = "*"
async-trait = "*"
